--- a/index.html
+++ b/index.html
@@ -1,70 +1,230 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ember.js • TodoMVC</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-  		<script type="text/x-handlebars">
-		   <section id="todoapp">
-		   	<header id="header">
-		      	<h1>todos</h1>
-		      	<input type="text" id="new-todo" placeholder="What needs to be done?" />
-		   		</header>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<!--meta name="viewport" content="width=device-width, initial-scale=1"-->
+	<title>Taxigol</title>
 
-		        <section id="main">
-		          <ul id="todo-list">
-		            <li class="completed">
-		              <input type="checkbox" class="toggle">
-		              <label>Learn Ember.js</label><button class="destroy"></button>
-		            </li>
-		            <li>
-		              <input type="checkbox" class="toggle">
-		              <label>...</label><button class="destroy"></button>
-		            </li>
-		            <li>
-		              <input type="checkbox" class="toggle">
-		              <label>Profit!</label><button class="destroy"></button>
-		            </li>
-		          </ul>
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css">
+	<link rel="stylesheet" href="css/common.css">
 
-		          <input type="checkbox" id="toggle-all">
-		        </section>
-
-		        <footer id="footer">
-		          <span id="todo-count">
-		            <strong>2</strong> todos left
-		          </span>
-		          <ul id="filters">
-		            <li>
-		              <a href="all" class="selected">All</a>
-		            </li>
-		            <li>
-		              <a href="active">Active</a>
-		            </li>
-		            <li>
-		              <a href="completed">Completed</a>
-		            </li>
-		          </ul>
-
-		          <button id="clear-completed">
-		            Clear completed (1)
-		          </button>
-		        </footer>
-		    </section>
-
-	    	<footer id="info">
-				<p>Double-click to edit a todo</p>
-	   	</footer>
-  		</script>
+    <script type="text/javascript" src="cordova.js"></script>
+	<script src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=geometry"></script>
 
 
-  		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
-		<script src="js/ember/handlebars-1.0.0.js"></script>
-		<script src="js/ember/ember-1.0.0.js"></script>
+</head>
+	<body>
 
-		<script src="js/application.js"></script>
-		<script src="js/router.js"></script>
-  </body>
+		<!--
+			@Page: page-register
+			@Description: the landing page. This page is where the user registers for the first time
+			if the user has already registered, this page is skipped.
+		 -->
+		<div data-role="page" id="page-register" data-theme="b">
+			<div data-role="header" data-theme="e">
+				<h4><i class="icon-rocket"></i> Taxigol</h4>
+			</div>
+			<div data-role="content" data-theme="b">
+				<label for="txtName"><i class="icon-user"></i> Nombre:</label>
+				<input type="text" id="txtName" value="" placeholder="Tu nombre. Ej: Pepito Fulano" />
+				<label for="txtCel"><i class="icon-phone-sign"></i> Celular:</label>
+				<input type="tel" id="txtCel" value="" placeholder="Tu n&uacute;mero de celular. Ej: 3008743920" />
+				<label for="txtEmail"><i class="icon-envelope"></i> Correo:</label>
+				<input type="email" id="txtEmail" value="" placeholder="Tu e-mail. Ej: pedro@ejemplo.com" />
+				<a id="btnRegister" data-role="button" data-theme="e">Registrate</a>
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="a">
+				<h1><i class="icon-rocket"></i> Taxigol: R&aacute;pido, f&aacute;cil y seguro</h1>
+			</div>
+
+		</div>
+		<!-- END -->
+
+		<!--
+			@Page: Map
+			@Description:
+		-->
+		<div data-role="page" id="map-page" data-theme="b">
+			<div data-role="header" data-theme="e">
+				<input type="search" name="search" id="txtAddress" value="tu direcci&oacute;n" />
+			</div>
+			<div id="map-container" data-role="content" data-theme="b">
+				<div id="map-canvas"></div>
+
+			</div>
+
+			<div data-role="footer" data-position="fixed" data-theme="a" style="height: 0px; border: 0">
+				<a id="btnHail" data-theme="e" data-rel="dialog" href="#confirm-address-dialog">
+					<i class="icon-phone"></i> Pedir Taxi
+				</a>
+			</div>
+
+		</div>
+		<!-- END map-page -->
+
+		<!--
+			@Dialog: Confirm address dialog
+			@Description: this dialog simple asks the user to confirm that the address is correct
+		 -->
+		<div data-role="page" id="confirm-address-dialog" data-theme="b">
+			<div data-role="header" data-theme="e">
+				<h1> Confirmar direcci&oacute;n </h1>
+			</div>
+			<div data-role="content" data-theme="b">
+				<p>
+					Est&aacute;s seguro que quieres
+					pedir un taxi de la direcci&oacute;n
+				</p>
+				<p>
+					<b id="txtAddressConfirm"></b>
+				</p>
+				<button id="btnHailConfirm" data-theme="e">
+					<i class="icon-phone"></i> Pedir Taxi
+				</button>
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="a">
+				<p>Taxigol</p>
+			</div>
+
+		</div>
+		<!-- END -->
+
+		<!--
+			@Page: Loading
+			@Description:
+		-->
+		<div data-role="page" id="loading-page" data-theme="b">
+			<div data-role="header" data-theme="e">
+				<h1> Confirmando </h1>
+			</div>
+			<div data-role="content" data-theme="b">
+				<p>Tu taxi llegar&aacute; pronto</p>
+				<div id ="loadingIndicator"></div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="e">
+				<div data-role="navbar">
+					<ul>
+						<li>
+							<a id="btnCancelTaxi">
+								<i class="icon-remove-sign" ></i> Cancelar taxi
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<!-- -->
+
+
+
+		<!--
+			@Page: Servicio Confirmado
+			@Description:
+		-->
+		<div data-role="page" id="success-page" data-theme="b">
+			<div data-role="header" data-theme="e">
+				<h1><i class="icon-rocket"></i> Taxi confirmado </h1>
+			</div>
+			<div data-role="content" data-theme="b">
+				<img src="http://placehold.it/125x125" />
+				<p>Placa:</p>
+				<p></p><input type="text" id="txtPlaca" value=""/></p>
+				<p>Nombre del conductor:</p>
+				<p><input type="text" id="txtDriverName" value=""/></p>
+				<p> Celular del conductor: </p>
+				<p><input type="text" id="txtDriverCel" value=""/></p>
+				<p><i class="icon-smile"></i> Tu taxi llegar&aacute; pronto</p>
+
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="e">
+				<div data-role="navbar">
+					<ul>
+						<li>
+							<a id="btnFollowTaxi" href="#follow-page" data-transition="flip">
+								<i class="icon-search"></i> Ver Taxi
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+		<!-- -->
+
+		<!--
+			@Page: Follow driver page
+			@Description:
+		-->
+		<div data-role="page" id="follow-page" data-theme="b">
+			<div data-role="header" data-theme="e">
+				<h1><i class="icon-rocket"></i> Taxi confirmado </h1>
+			</div>
+            <div id="map-container2" data-role="content" data-theme="b">
+				<div id="map-canvas2"></div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="e">
+				<div data-role="navbar">
+					<ul>
+						<li>
+							<a href="#map-page" data-transition="flip">
+								<i class="icon-search"></i> Cancelar taxi
+							</a>
+						</li>
+						<li>
+							<a href="#map-page" data-transition="flip">
+								<i class="icon-search"></i> Ver Taxi
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+		<!-- -->
+
+		<script type="text/javascript" src="js/models/model-location.js"></script>
+		<script type="text/javascript" src="js/models/model-user.js"></script>
+		<script type="text/javascript" src="js/models/model-service.js"></script>
+		<script type="text/javascript" src="js/models/model-driver.js"></script>
+		<script type="text/javascript" src="js/services/LocationServices.js"></script>
+		<script type="text/javascript" src="js/services/ServiceServices.js"></script>
+		<script type="text/javascript" src="js/services/TaxiServices.js"></script>
+		<script type="text/javascript" src="js/services/UserServices.js"></script>
+        <script type="text/javascript" src="js/helpers/location-helper.js"></script>
+		<script type="text/javascript" src="js/map-controller.js"></script>
+		<script type="text/javascript" src="js/user-controller.js"></script>
+		<script type="text/javascript" src="js/follow-controller.js"></script>
+        <script type="text/javascript" src="js/driver-controller.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+
+		<script type="text/javascript" src="js/widgets/spin.min.js"></script>
+		<script type="text/javascript">
+				var opts = {
+					lines: 13, // The number of lines to draw
+					length: 50, // The length of each line
+					width: 9, // The line thickness
+					radius: 37, // The radius of the inner circle
+					corners: 1, // Corner roundness (0..1)
+					rotate: 0, // The rotation offset
+					direction: 1, // 1: clockwise, -1: counterclockwise
+					color: '#fadb4e', // #rgb or #rrggbb
+					speed: 1.5, // Rounds per second
+					trail: 100, // Afterglow percentage
+					shadow: true, // Whether to render a shadow
+					hwaccel: true, // Whether to use hardware acceleration
+					className: 'spinner', // The CSS class to assign to the spinner
+					zIndex: 2e9, // The z-index (defaults to 2000000000)
+					top: 'auto', // Top position relative to parent in px
+					left: 'auto' // Left position relative to parent in px
+				};
+				var target = document.getElementById('loadingIndicator');
+				var spinner = new Spinner(opts).spin(target);
+			</script>
+
+	</body>
 </html>
